--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -9,7 +9,6 @@
 body {
   font-family: "Urbanist", sans-serif;
   width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,18 +17,19 @@ body {
 }
 
 .container {
-  width: 300px;
-  height: 500px;
+  width: 500px;
+  height: 800px;
   background: #e5f3fe;
   box-shadow: 5px 5px 10px #cee3f2, -5px -5px 10px #faffff;
   padding: 5px 20px;
+  margin: 20px 0;
   border-radius: 5px;
   position: relative;
 }
 
 .search-box {
   width: 100%;
-  margin: 5px 0;
+  margin: 15px 0;
   text-align: center;
 }
 
@@ -43,12 +43,20 @@ body {
   box-shadow: inset -7px -7px 20px 0px #fff9, inset -4px -4px 5px 0px #fff9,
     inset 7px 7px 20px 0px #0002, inset 4px 4px 5px 0px #0001;
   color: #87b0cd;
-  font-size: 0.8rem;
+  font-size: 1.2rem;
 }
 
 .result {
   text-align: center;
   color: #87b0cd;
+}
+
+.result h2{
+  font-size: 10rem;
+}
+
+.result p{
+  font-size: 1.5rem;
 }
 
 .grid {
@@ -59,7 +67,7 @@ body {
   background: #e5f3fe;
   box-shadow: 5px 5px 10px #cee3f2, -5px -5px 10px #faffff;
   padding: 2px;
-  margin: 5px auto;
+  margin: 15px auto;
   border-radius: 5px;
   text-align: center;
 }
@@ -78,6 +86,7 @@ body {
 }
 
 .flex_2 div {
+  width: 15%;
   background: #e5f3fe;
   box-shadow: 5px 5px 10px #cee3f2, -5px -5px 10px #faffff;
   color: #87b0cd;
@@ -85,15 +94,32 @@ body {
   text-align: center;
 }
 
+.flex_2 p{
+  font-size: 1.5rem;
+}
+
 footer {
-  width: 250px;
-  height: 40px;
+  width: 90%;
+  height: 45px;
   display: flex;
   flex-direction: column;
   position: absolute;
   bottom: 2%;
   background: #e5f3fe;
   box-shadow: 5px 5px 10px #cee3f2, -5px -5px 10px #faffff;
-  font-size: 0.65rem;
+  font-size: 1rem;
   text-align: center;
+}
+
+
+@media screen and (max-width: 600px){
+  body{height: 100vh;}
+  .container{width: 300px;height: 500px;}
+  .search-box{margin: 5px auto;}
+  .search-box input{font-size: 0.8rem;}
+  .result h2{font-size: 3rem;}
+  .result p{font-size: 1rem;}
+  .grid{ margin: 5px auto;}
+  .flex_2 p {font-size: 1rem;}
+  footer{height: 40px;font-size: 0.65rem;}
 }
