--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -1,4 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Urbanist:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Gelasio&family=Montserrat:wght@300;400;500;600&display=swap');
+
+:root {
+  --pry: #db6b8d;
+  ---sec: #d6dec3;
+  --dark: #000;
+  --light: #fff9e8;
+  --error: #eb4405;
+  --mont: 'Montserrat', sans-serif;
+  --gela: 'Gelasio', serif;
+}
 
 * {
   box-sizing: border-box;
@@ -7,119 +17,203 @@
 }
 
 body {
-  font-family: "Urbanist", sans-serif;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: #e5f3fe;
-}
-
-.container {
-  width: 450px;
-  height: 800px;
-  background: #e5f3fe;
-  box-shadow: 5px 5px 10px #cee3f2, -5px -5px 10px #faffff;
-  padding: 5px 20px;
-  margin: 20px 0;
-  border-radius: 5px;
-  position: relative;
-}
-
-.search-box {
   width: 100%;
-  margin: 15px 0;
-  text-align: center;
+  font-family: var(--mont);
 }
 
-.search-box input {
-  width: 70%;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  padding: 5px 10px;
-  background: #e5f3fe;
-  box-shadow: inset -7px -7px 20px 0px #fff9, inset -4px -4px 5px 0px #fff9,
-    inset 7px 7px 20px 0px #0002, inset 4px 4px 5px 0px #0001;
-  color: #87b0cd;
-  font-size: 1.2rem;
-}
-
-.result {
-  text-align: center;
-  color: #87b0cd;
-}
-
-.result h2{
-  font-size: 8rem;
-}
-
-.result p{
-  font-size: 1.5rem;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 5px;
+header {
   width: 100%;
-  background: #e5f3fe;
-  box-shadow: 5px 5px 10px #cee3f2, -5px -5px 10px #faffff;
-  padding: 2px;
-  margin: 15px auto;
-  border-radius: 5px;
-  text-align: center;
-}
-
-.flex {
-  display: flex;
-  justify-content: center;
-  font-size: 2.5rem;
-}
-
-.flex_2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 20px 0 0 0;
+  background: var(---sec);
+  padding: 20px 35px;
+  margin: 0 0 20px;
 }
 
-.flex_2 div {
-  width: 15%;
-  background: #e5f3fe;
-  box-shadow: 5px 5px 10px #cee3f2, -5px -5px 10px #faffff;
-  color: #87b0cd;
-  font-size: 0.8rem;
-  text-align: center;
+header h1{
+  color: var(--dark);
 }
 
-.flex_2 p{
+header ul {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+header ul li a {
+  color: var(--dark);
+  margin: 0 10px;
   font-size: 1.5rem;
+  transition: 0.3s all ease;
 }
 
-footer {
-  width: 90%;
-  height: 45px;
+header ul li a:hover {
+  color: var(--pry);
+}
+
+main {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  bottom: 2%;
-  background: #e5f3fe;
-  box-shadow: 5px 5px 10px #cee3f2, -5px -5px 10px #faffff;
-  font-size: 1rem;
-  text-align: center;
+  align-items: center;
+  padding: 0 30px;
 }
 
+.search {
+  width: 60%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  border: 1px solid var(--dark);
+  padding: 5px 10px;
+  margin-bottom: 20px;
+}
 
-@media screen and (max-width: 600px){
-  body{height: 100vh;}
-  .container{width: 300px;height: 500px;}
-  .search-box{margin: 5px auto;}
-  .search-box input{font-size: 0.8rem;}
-  .result h2{font-size: 3rem;}
-  .result p{font-size: 1rem;}
-  .grid{ margin: 5px auto;}
-  .flex_2 p {font-size: 1rem;}
-  footer{height: 40px;font-size: 0.65rem;}
+.search input {
+  width: 95%;
+  height: 100%;
+  border: none;
+  outline: none;
+  font-size: 1.2rem;
+  text-transform: capitalize;
+}
+
+.search button {
+  width: 5%;
+  height: 100%;
+  background: transparent;
+  color: var(---dark);
+  font-size: 1.5rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s all ease;
+}
+
+.search button:hover {
+  transform: scale(1.3);
+  color: var(--pry);
+}
+
+.result {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.date {
+  padding: 5px 40px;
+  font-weight: 600;
+}
+
+.date span, .time span {
+  color: var(--pry);
+}
+
+.location {
+  display: flex;
+  align-items: center;
+  padding: 5px 20px;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.location span {
+  margin: 0 10px;
+  color: var(--pry);
+}
+
+.time {
+  padding: 5px 40px;
+}
+
+.flex {
+  width: 80%;
+  display: flex;
+  padding: 10px 0;
+}
+
+.flex h1 {
+  font-family: var(--gela);
+  font-size: 9rem;
+}
+
+.flex p {
+  color: var(--pry);
+  font-weight: 600;
+}
+
+.flex img {
+  width: 70%;
+}
+
+.details {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  background: var(--dark);
+  padding: 10px 30px;
+}
+
+.details div {
+  width: 50%;
+  height: 50px;
+  text-align: center;
+  margin: 10px 0;
+}
+
+.details div p {
+  align-items: center;
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: var(---sec);
+}
+
+.details div span {
+  color: var(--pry);
+}
+
+@media screen and (max-width: 600px) {
+  header {
+    font-size: 0.7rem;
+    padding: 20px 5px;
+  }
+
+  header ul li a {
+    font-size: 1.1rem;
+  }
+
+  .search {
+    width: 100%;
+  }
+
+  .result {
+    width: 100%;
+  }
+
+  .location {
+    font-size: 1.3rem;
+  }
+
+  .time {
+    padding: 5px 10px;
+  }
+
+  .flex {
+    width: 100%;
+  }
+
+  .flex h1 {
+    font-size: 5rem;
+  }
+
+  .details{
+    padding: 10px 0;
+  }
+
+  .details div p {
+    font-size: 1.2rem;
+  }
 }
