added error message

--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -198,6 +198,64 @@ main {
   color: var(--pry);
 }
 
+.error {
+  position: absolute;
+  top: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 50px;
+}
+
+.error p {
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+.error span {
+  color: var(--error);
+}
+
+.error button {
+  padding: 10px 30px;
+  margin: 30px 0;
+  background: var(--error);
+  color: var(--light);
+  font-size: 1.5rem;
+  border: 1px solid transparent;
+  cursor: pointer;
+  transition: 0.5s all ease;
+}
+
+.error button:hover {
+  background: transparent;
+  color: var(--error);
+  border-color: var(--error);
+}
+
+.error i {
+  font-size: 5rem;
+  color: var(--error);
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(var(--error), 0.7);
+  }
+
+  50% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(var(--error));
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(var(--error));
+  }
+}
+
 @media screen and (max-width: 600px) {
   header {
     font-size: 0.7rem;
