--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -70,8 +70,12 @@ main {
   margin-bottom: 20px;
 }
 
+.search form {
+  width: 100%;
+}
+
 .search input {
-  width: 95%;
+  width: 100%;
   height: 100%;
   border: none;
   outline: none;
